# City-Generator

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
assets/: PreLoadList.txt
assets/models/Buildings/: buildingTest2.mtl
assets/models/Buildings/LowPoly/: low_buildingA.mtl  low_buildingB.mtl  low_buildingC.mtl  low_buildingD.mtl  low_buildingE.mtl  low_buildingF.mtl  low_buildingG.mtl  low_buildingH.mtl  low_buildingI.mtl  low_buildingJ.mtl
assets/models/Buildings/NoTextureStarter/: AngledRoofHouse.mtl  CellPhoneBuilding_01.mtl  LargeRectangle.mtl
assets/models/Terrain/: Terrain_first.mtl  Terrain_repeat.mtl
assets/models/demo_01/road/: road_asphalt.mtl
assets/shaders/backpack/: fragmentShader.fs  vertexShader.vs
assets/shaders/default/: missing.frag
assets/shaders/default/bounding_box/: bb_shader.frag  bb_shader.vert
assets/shaders/default/buildings/: build_shader.frag  build_shader.vert  build_shader_instanced.vert
assets/shaders/default/object/: object_shader.frag  object_shader.vert  object_shader_instanced.vert
assets/shaders/default/road/: road_shader.frag  road_shader.vert
assets/shaders/default/skybox/: skybox_shader.vert
assets/shaders/default/sprite/: object_shader.frag  sprite_shader.frag  sprite_shader.vert
assets/shaders/texture/: shader1.fs  shader1.vs
include/city_gen/: camera.hpp  cityRandom.hpp  config.hpp  generator.hpp  helper.hpp  inputHandler.hpp  menues.hpp  resourceManager.hpp  scene.hpp  stopwatch.hpp
include/city_gen/objects/: all.hpp  base_object.hpp  bounding_box.hpp  light_object.hpp  line_object.hpp  model_object.hpp  object.hpp  particle_object.hpp  road_object.hpp  road_zone_object.hpp  sprite_object.hpp
include/city_gen/objects/lights/: directionalLight_object.hpp  pointLight_object.hpp
include/city_gen/renderer/: frameBuffer.hpp  indexBuffer.hpp  line.hpp  mesh.hpp  model.hpp  renderer.hpp  road.hpp  shader.hpp  skybox.hpp  sprite.hpp  texture.hpp  vertexArray.hpp  vertexBuffer.hpp  vertexBufferLayout.hpp  zone.hpp
src/: CMakeLists.txt  camera.cpp  cityRandom.cpp  config.cpp  generator.cpp  helper.cpp  inputHandler.cpp  main.cpp  menues.cpp  mesh.cpp  resourceManager.cpp  scene.cpp  stopwatch.cpp
src/imgui/: CMakeLists.txt
src/objects/: CMakeLists.txt  base_object.cpp  bounding_box.cpp  line_object.cpp  model_object.cpp  road_object.cpp  road_zone_object.cpp  sprite_object.cpp
src/renderer/: CMakeLists.txt  frameBuffer.cpp  indexBuffer.cpp  line.cpp  mesh.cpp  model.cpp  renderer.cpp  road.cpp  shader.cpp  skybox.cpp  sprite.cpp  texture.cpp  vertexArray.cpp  vertexBuffer.cpp  vertexBufferLayout.cpp  zone.cpp
src/unused/: object.cpp
